--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - name: configure Pagefile
       uses: al-cheb/configure-pagefile-action@v1.2
-      if: runner.os == 'Windows'
+      if: matrix.os == 'windows-latest'
       with:
         minimum-size: 8
     - name: Install Go
